--- a/My Project/大麦/大麦项目笔记——架构组件.md
+++ b/My Project/大麦/大麦项目笔记——架构组件.md
@@ -735,3 +735,637 @@ public class RepeatExecuteLimitAspect {
 组件已经自动装配，可以在Spring中自动获取，需要用到的时候进行注解配置即可
 
 ![image-20250114174551634](images/大麦项目笔记——架构组件/image-20250114174551634.png)
+
+## 分布式锁
+
+### 概述
+
+分布式锁是借助 redisson 实现的，我们在redisson 的基础上进行了一层封装，使得可以快速获取各种类型的分布式锁。
+
+**自动配置类：**
+
+```java
+public class ServiceLockAutoConfiguration {
+    
+    /**
+     * 分布式锁的key解析处理器
+     * */
+    @Bean(LockInfoType.SERVICE_LOCK)
+    public LockInfoHandle serviceLockInfoHandle(){
+        return new ServiceLockInfoHandle();
+    }
+    
+    /**
+     * 锁管理
+     * */
+    @Bean
+    public ManageLocker manageLocker(RedissonClient redissonClient){
+        return new ManageLocker(redissonClient);
+    }
+    
+    /**
+     * 锁工厂
+     * */
+    @Bean
+    public ServiceLockFactory serviceLockFactory(ManageLocker manageLocker){
+        return new ServiceLockFactory(manageLocker);
+    }
+    
+    /**
+     * 分布式锁切面
+     * */
+    @Bean
+    public ServiceLockAspect serviceLockAspect(LockInfoHandleFactory lockInfoHandleFactory,ServiceLockFactory serviceLockFactory){
+        return new ServiceLockAspect(lockInfoHandleFactory,serviceLockFactory);
+    }
+    /**
+     * 分布式锁工具
+     * */
+    @Bean
+    public ServiceLockTool serviceLockUtil(LockInfoHandleFactory lockInfoHandleFactory,ServiceLockFactory serviceLockFactory){
+        return new ServiceLockTool(lockInfoHandleFactory,serviceLockFactory);
+    }
+}
+```
+
+ServiceLockInfoHandle主要是用于解析key，并且分为分布式锁和幂等锁两种方式
+
+ManageLocker用于获取锁，锁主要是四种类型，分别是非公平、公平、读锁、写锁，先把锁缓存起来
+
+ServiceLockFactory是工厂，通过LockType从ManageLocker中获取对应的锁
+
+ServiceLockAspect是AOP切面的方式加锁
+
+ServiceLockTool是通过工具类的方式进行加锁
+
+下面详细解析两种分布式锁的方式
+
+### 1. AOP分布式锁
+
+AOP的优点就是使用方便，直接通过注解就可以对整段代码进行加锁了，缺点是灵活度一般，部分特定化场景无法使用，且锁粒度较大，可能会影响到性能，分布式锁AOP和事务AOP可能会产生冲突，需要规定AOP顺序，防止冲突。
+
+**AOP自定义注解流程：**
+
+指定注解的参数，作用范围等，然后使用AOP对注解进行环切，添加处理逻辑。
+
+**自定义ServiceLock的注解**
+
+```java
+@Target(value= {ElementType.TYPE, ElementType.METHOD})
+@Retention(value= RetentionPolicy.RUNTIME)
+public @interface ServiceLock {
+
+    /**
+     * 锁的类型(默认 可重入锁)
+     * */
+    LockType lockType() default LockType.Reentrant;
+    
+    /**
+     * 业务名称
+     * @return name
+     */
+    String name() default "";
+    /**
+     * 自定义业务key
+     * @return keys
+     */
+    String [] keys();
+
+    /**
+     * 尝试加锁失败最多等待时间
+     * @return waitTime
+     */
+    long waitTime() default 10;
+
+    /**
+     * 时间单位
+     * @return TimeUnit
+     */
+    TimeUnit timeUnit() default TimeUnit.SECONDS;
+
+    /**
+     * 加锁超时的处理策略
+     * @return LockTimeOutStrategy
+     */
+    LockTimeOutStrategy lockTimeoutStrategy() default LockTimeOutStrategy.FAIL;
+
+    /**
+     * 自定义加锁超时的处理策略
+     * @return customLockTimeoutStrategy
+     */
+    String customLockTimeoutStrategy() default "";
+}
+```
+
+**AOP主方法——对注解进行环切**
+
+```java
+@Around("@annotation(servicelock)")
+    public Object around(ProceedingJoinPoint joinPoint, ServiceLock servicelock) throws Throwable {
+        // 获取handler用于拼接锁
+        LockInfoHandle lockInfoHandle = lockInfoHandleFactory.getLockInfoHandle(LockInfoType.SERVICE_LOCK);
+        // 进行拼接真正的锁名
+        String lockName = lockInfoHandle.getLockName(joinPoint, servicelock.name(),servicelock.keys());
+        // 锁类型
+        LockType lockType = servicelock.lockType();
+        // 等待时间
+        long waitTime = servicelock.waitTime();
+        // 当前时间
+        TimeUnit timeUnit = servicelock.timeUnit();
+        // 通过factory从缓存中获取锁
+        ServiceLocker lock = serviceLockFactory.getLock(lockType);
+        // 获取结果
+        boolean result = lock.tryLock(lockName, timeUnit, waitTime);
+
+        if (result) {
+            try {
+                // 执行业务逻辑
+                return joinPoint.proceed();
+            }finally{
+                // 释放锁
+                lock.unlock(lockName);
+            }
+        }else {
+            // 获取锁不成功
+            log.warn("Timeout while acquiring serviceLock:{}",lockName);
+            // 降级逻辑，如果有就执行，没有就抛异常结束业务
+            String customLockTimeoutStrategy = servicelock.customLockTimeoutStrategy();
+            if (StringUtil.isNotEmpty(customLockTimeoutStrategy)) {
+                // 执行降级逻辑
+                return handleCustomLockTimeoutStrategy(customLockTimeoutStrategy, joinPoint);
+            }else{
+                // 快速失败
+                servicelock.lockTimeoutStrategy().handler(lockName);
+            }
+            return joinPoint.proceed();
+        }
+    }
+```
+
+@Around("@annotation(servicelock)")用于获取注解的参数，JoinPoint是用于获取方法的参数。
+
+**拼接锁名逻辑**
+
+```java
+    /**
+     * 锁信息前缀
+     * @return 具体前缀
+     * */
+    protected abstract String getLockPrefixName();
+    @Override
+    public String getLockName(JoinPoint joinPoint,String name,String[] keys){
+        return SpringUtil.getPrefixDistinctionName() +
+                "-" +
+                getLockPrefixName() +
+                SEPARATOR +
+                name +
+                getRelKey(joinPoint, keys);
+    }
+
+    /**
+     * 获取自定义键
+     * */
+    private String getRelKey(JoinPoint joinPoint, String[] keys){
+        Method method = getMethod(joinPoint);
+        List<String> definitionKeys = getSpElKey(keys, method, joinPoint.getArgs());
+        return SEPARATOR + String.join(SEPARATOR, definitionKeys);
+    }
+
+    private Method getMethod(JoinPoint joinPoint) {
+        MethodSignature signature = (MethodSignature) joinPoint.getSignature();
+        Method method = signature.getMethod();
+        if (method.getDeclaringClass().isInterface()) {
+            try {
+                method = joinPoint.getTarget().getClass().getDeclaredMethod(signature.getName(),
+                        method.getParameterTypes());
+            } catch (Exception e) {
+                log.error("get method error ",e);
+            }
+        }
+        return method;
+    }
+
+    private List<String> getSpElKey(String[] definitionKeys, Method method, Object[] parameterValues) {
+        List<String> definitionKeyList = new ArrayList<>();
+        for (String definitionKey : definitionKeys) {
+            if (!ObjectUtils.isEmpty(definitionKey)) {
+                EvaluationContext context = new MethodBasedEvaluationContext(
+                        null, 
+                        method, 
+                        parameterValues, 
+                        nameDiscoverer);
+                Object objKey = parser.parseExpression(definitionKey).getValue(context);
+                definitionKeyList.add(ObjectUtils.nullSafeToString(objKey));
+            }
+        }
+        return definitionKeyList;
+    }
+```
+
+拼接锁名的逻辑主要是通过获取前缀，锁分类，拼接SpEl表达式等方式得到一个真正的锁名称
+
+### 2. 工具类分布式锁
+
+有两种操作方式，不过原理是一样的
+
+1. 直接执行
+
+   ```java
+   /**
+        * 没有返回值的加锁执行
+        * @param lockType 锁类型
+        * @param taskRun 要执行的任务
+        * @param name 锁的业务名
+        * @param keys 锁的标识
+        * @param waitTime 等待时间
+        *
+        * */
+       public void execute(LockType lockType,TaskRun taskRun,String name,String [] keys,long waitTime) {
+           LockInfoHandle lockInfoHandle = lockInfoHandleFactory.getLockInfoHandle(LockInfoType.SERVICE_LOCK);
+           String lockName = lockInfoHandle.simpleGetLockName(name,keys);
+           ServiceLocker lock = serviceLockFactory.getLock(lockType);
+           boolean result = lock.tryLock(lockName, TimeUnit.SECONDS, waitTime);
+           if (result) {
+               try {
+                   taskRun.run();
+               }finally {
+                   lock.unlock(lockName);
+               }
+           }else {
+               LockTimeOutStrategy.FAIL.handler(lockName);
+           }
+       }
+   ```
+
+2. 获取锁，到业务中执行
+
+```java
+@RepeatExecuteLimit(
+            name = RepeatExecuteLimitConstants.CREATE_PROGRAM_ORDER,
+            keys = {"#programOrderCreateDto.userId","#programOrderCreateDto.programId"})
+    @Override
+    public String createOrder(ProgramOrderCreateDto programOrderCreateDto) {
+        compositeContainer.execute(CompositeCheckType.PROGRAM_ORDER_CREATE_CHECK.getValue(),programOrderCreateDto);
+        List<SeatDto> seatDtoList = programOrderCreateDto.getSeatDtoList();
+        List<Long> ticketCategoryIdList = new ArrayList<>();
+        // 获取票档集合
+        if (CollectionUtil.isNotEmpty(seatDtoList)) {
+            ticketCategoryIdList =
+                    seatDtoList.stream().map(SeatDto::getTicketCategoryId).distinct().collect(Collectors.toList());
+        }else {
+            ticketCategoryIdList.add(programOrderCreateDto.getTicketCategoryId());
+        }
+        // 本地锁集合
+        List<ReentrantLock> localLockList = new ArrayList<>(ticketCategoryIdList.size());
+        // 分布式锁集合
+        List<RLock> serviceLockList = new ArrayList<>(ticketCategoryIdList.size());
+        // 获取成功的本地锁集合
+        List<ReentrantLock> localLockSuccessList = new ArrayList<>(ticketCategoryIdList.size());
+        // 获取成功的分布式锁集合
+        List<RLock> serviceLockSuccessList = new ArrayList<>(ticketCategoryIdList.size());
+        // 获取锁集合
+        for (Long ticketCategoryId : ticketCategoryIdList) {
+            String lockKey = StrUtil.join("-",PROGRAM_ORDER_CREATE_V2,
+                    programOrderCreateDto.getProgramId(),ticketCategoryId);
+            ReentrantLock localLock = localLockCache.getLock(lockKey,false);
+            RLock serviceLock = serviceLockTool.getLock(LockType.Reentrant, lockKey);
+            localLockList.add(localLock);
+            serviceLockList.add(serviceLock);
+        }
+        // 先逐个获取本地锁
+        for (ReentrantLock reentrantLock : localLockList) {
+            try {
+                reentrantLock.lock();
+            }catch (Throwable t) {
+                break;
+            }
+            localLockSuccessList.add(reentrantLock);
+        }
+        // 逐个获取分布式锁
+        for (RLock rLock : serviceLockList) {
+            try {
+                rLock.lock();
+            }catch (Throwable t) {
+                break;
+            }
+            serviceLockSuccessList.add(rLock);
+        }
+        try {
+            return programOrderService.create(programOrderCreateDto);
+        }finally {
+            // 释放分布式锁，倒序
+            for (int i = serviceLockSuccessList.size() - 1; i >= 0; i--) {
+                RLock rLock = serviceLockSuccessList.get(i);
+                try {
+                    rLock.unlock();
+                }catch (Throwable t) {
+                    log.error("service lock unlock error",t);
+                }
+            }
+            // 释放本地锁，倒序
+            for (int i = localLockSuccessList.size() - 1; i >= 0; i--) {
+                ReentrantLock reentrantLock = localLockSuccessList.get(i);
+                try {
+                    reentrantLock.unlock();
+                }catch (Throwable t) {
+                    log.error("local lock unlock error",t);
+                }
+            }
+        }
+    }
+```
+
+逻辑比较简答，就是逐个获取分布式锁，然后进行lock，如果失败就抛出异常，最后释放已经拿到的所有锁
+
+## API 定制防刷
+
+### 概述
+
+API 定制防刷限流和限流熔断的区别：
+
+![image-20250119231027413](images/image-20250119231027413.png)
+
+**API防刷限流用于前置保护，限流熔断作为架构的最后防线，提升系统整体的健壮性。**
+
+### 实现
+
+在 Java 代码中主要是获取参数，传到 lua 脚本，然后根据lua脚本的判断和一些参数进行后续操作
+
+```java
+   /**
+     * 执行接口防刷逻辑
+     *
+     * @param id     用户标识
+     * @param url    请求路径
+     * @param request ServerHttpRequest 对象，包含请求的详细信息
+     */
+    public void apiRestrict(String id, String url, ServerHttpRequest request) {
+        // 检查路径是否需要限流保护
+        if (checkApiRestrict(url)) {
+            long triggerResult = 0L; // 是否触发规则
+            long triggerCallStat = 0L; // 是否需要保存请求记录
+            long apiCount; // 当前请求数
+            long threshold; // 规则限制的阈值
+            long messageIndex; // 深度规则提示信息索引
+            String message = ""; // 提示信息
+            String ip = getIpAddress(request); // 获取客户端 IP 地址
+            String commonKey = ip + "_" + (id != null ? id + "_" : "") + url; // 构建唯一请求标识
+
+            try {
+                List<DepthRuleVo> depthRuleVoList = new ArrayList<>(); // 深度规则列表
+                RuleVo ruleVo = redisCache.getForHash(
+                        RedisKeyBuild.createRedisKey(RedisKeyManage.ALL_RULE_HASH),
+                        RedisKeyBuild.createRedisKey(RedisKeyManage.RULE).getRelKey(),
+                        RuleVo.class
+                ); // 获取普通规则
+                String depthRuleStr = redisCache.getForHash(
+                        RedisKeyBuild.createRedisKey(RedisKeyManage.ALL_RULE_HASH),
+                        RedisKeyBuild.createRedisKey(RedisKeyManage.DEPTH_RULE).getRelKey(),
+                        String.class
+                ); // 获取深度规则
+                if (StringUtil.isNotEmpty(depthRuleStr)) {
+                    depthRuleVoList = JSON.parseArray(depthRuleStr, DepthRuleVo.class);
+                }
+
+                int apiRuleType = ApiRuleType.NO_RULE.getCode(); // 规则类型：0 无规则，1 普通规则，2 深度规则
+                if (ruleVo != null) {
+                    apiRuleType = ApiRuleType.RULE.getCode();
+                    message = ruleVo.getMessage();
+                }
+                if (ruleVo != null && CollectionUtil.isNotEmpty(depthRuleVoList)) {
+                    apiRuleType = ApiRuleType.DEPTH_RULE.getCode();
+                }
+
+                if (apiRuleType == ApiRuleType.RULE.getCode() 
+                        || apiRuleType == ApiRuleType.DEPTH_RULE.getCode()) {
+                    // 构建普通规则参数
+                    JSONObject parameter = getRuleParameter(apiRuleType, commonKey, ruleVo);
+
+                    // 构建深度规则参数
+                    if (apiRuleType == ApiRuleType.DEPTH_RULE.getCode()) {
+                        parameter = getDepthRuleParameter(parameter, commonKey, depthRuleVoList);
+                    }
+
+                    // 调用 Lua 脚本进行限流处理
+                    ApiRestrictData apiRestrictData = apiRestrictCacheOperate.apiRuleOperate(
+                            Collections.singletonList(JSON.toJSONString(parameter)), new Object[]{}
+                    );
+
+                    // 获取限流结果
+                    triggerResult = apiRestrictData.getTriggerResult(); // 是否触发规则
+                    triggerCallStat = apiRestrictData.getTriggerCallStat(); // 是否保存记录
+                    apiCount = apiRestrictData.getApiCount(); // 当前请求数
+                    threshold = apiRestrictData.getThreshold(); // 阈值
+                    messageIndex = apiRestrictData.getMessageIndex(); // 提示信息索引
+
+                    if (messageIndex != -1) {
+                        message = Optional.ofNullable(depthRuleVoList.get((int) messageIndex))
+                                .map(DepthRuleVo::getMessage)
+                                .orElse(message);
+                    }
+                    log.info("API限流结果 [key: {}], [触发: {}], [保存记录: {}], [请求数: {}], [阈值: {}]",
+                            commonKey, triggerResult, triggerCallStat, apiCount, threshold);
+                }
+            } catch (Exception e) {
+                log.error("Redis Lua 脚本执行错误", e);
+            }
+
+            // 如果触发了限流规则
+            if (triggerResult == 1) {
+                if (triggerCallStat == ApiRuleType.RULE.getCode() 
+                        || triggerCallStat == ApiRuleType.DEPTH_RULE.getCode()) {
+                    saveApiData(request, url, (int) triggerCallStat); // 保存请求记录
+                }
+                String defaultMessage = BaseCode.API_RULE_TRIGGER.getMsg();
+                if (StringUtil.isNotEmpty(message)) {
+                    defaultMessage = message;
+                }
+                throw new DaMaiFrameException(BaseCode.API_RULE_TRIGGER.getCode(), defaultMessage);
+            }
+        }
+    }
+```
+
+**lua 脚本**
+
+```lua
+-- 是否需要进行限制
+local trigger_result = 0
+-- 是否进行保存记录
+local trigger_call_Stat = 0
+-- 请求数
+local api_count = 0
+-- 规则阈值
+local threshold = 0
+-- 规则对象
+local apiRule = cjson.decode(KEYS[1])
+-- 规则类型
+local api_rule_type = apiRule.apiRuleType
+-- 普通规则中要进行统计请求数
+local rule_key = apiRule.ruleKey
+-- 普通规则中进行统计的时间
+local rule_stat_time = apiRule.statTime
+-- 普通规则中进行统计的阈值
+local rule_threshold = apiRule.threshold
+-- 普通规则超过阈值后限制的时间
+local rule_effective_time = apiRule.effectiveTime
+-- 实现普通规则执行限制
+local rule_limit_key = apiRule.ruleLimitKey
+-- 进行统计超过普通规则的数量sorted set结构  score当前时间 member唯一值(当前时间_请求数)
+local z_set_key = apiRule.zSetRuleStatKey
+-- 当前时间
+local current_Time = apiRule.currentTime
+-- 定制的规则提示语索引
+local message_index = -1
+-- 请求数
+local count = tonumber(redis.call('incrby', rule_key, 1))
+-- 第一次设置普通规则的统计时间
+if (count == 1) then
+    redis.call('expire', rule_key, rule_stat_time)
+end
+-- 如果在普通规则的统计时间下请求数超过了阈值
+if ((count - rule_threshold) >= 0) then
+    -- 如果普通规则之前没有生效限制过或者限制已经失效
+    if (redis.call('exists', rule_limit_key) == 0) then
+        redis.call('set', rule_limit_key, rule_limit_key)
+        redis.call('expire', rule_limit_key, rule_effective_time)
+        -- 进行这一轮的初次限制要保存记录
+        trigger_call_Stat = 1
+        -- 每一轮发生初次限制保存到sorted set
+        local z_set_member = current_Time .. "_" .. tostring(count)
+        redis.call('zadd', z_set_key, current_Time, z_set_member)
+    end
+    -- 发生了限制
+    trigger_result = 1
+end
+-- 普通规则还在生效限制中
+if (redis.call('exists', rule_limit_key) == 1) then
+    -- 发生了限制
+    trigger_result = 1
+end
+api_count = count
+threshold = rule_threshold
+-- 如果深度规则存在的话
+if (api_rule_type == 2) then
+    -- 获取所有的深度规则
+    local depthRules = apiRule.depthRules
+    -- 循环深度规则
+    for index, depth_rule in ipairs(depthRules) do
+        -- 深度规则的开始时间范围
+        local start_time_window = depth_rule.startTimeWindowTimestamp
+        -- 深度规则的结束时间范围
+        local end_time_window = depth_rule.endTimeWindowTimestamp
+        -- 深度规则中进行统计的时间
+        local depth_rule_stat_time = depth_rule.statTime
+        -- 深度规则中进行统计的阈值
+        local depth_rule_threshold = depth_rule.threshold
+        -- 深度规则超过阈值后限制的时间
+        local depth_rule_effective_time = depth_rule.effectiveTime
+        -- 实现深度规则执行限制
+        local depth_rule_limit_key = depth_rule.depthRuleLimit
+
+        threshold = depth_rule_threshold
+        -- 将当前时间之前的时间范围的普通规则统计清除掉，因为这些过期了
+        if (current_Time > start_time_window) then
+            redis.call('zremrangebyscore', z_set_key, 0, start_time_window - 1000)
+        end
+        -- 如果当前时间在设置的时间范围内
+        if (current_Time >= start_time_window and current_Time <= end_time_window) then
+            -- 开始时间范围
+            local z_set_min_score = start_time_window;
+            -- 结束时间范围
+            local z_set_max_score = current_Time;
+            -- 此操作是更新开始时间范围
+            if ((current_Time - start_time_window) > depth_rule_stat_time * 1000) then
+                z_set_min_score = current_Time - (depth_rule_stat_time * 1000)
+            end
+            -- 根据时间范围获得普通规则的限制数量
+            local rule_trigger_count = tonumber(redis.call(
+                    'zcount', z_set_key, z_set_min_score, z_set_max_score
+            ))
+            api_count = rule_trigger_count
+            -- 如果统计的数量超过限制的话
+            if ((rule_trigger_count - depth_rule_threshold) >= 0) then
+                -- 如果深度规则之前没有生效限制过或者限制已经失效
+                if (redis.call('exists', depth_rule_limit_key) == 0) then
+                    redis.call('set', depth_rule_limit_key, depth_rule_limit_key)
+                    redis.call('expire', depth_rule_limit_key, depth_rule_effective_time)
+                    -- 发生了限制
+                    trigger_result = 1
+                    -- 进行这一轮的初次限制要保存记录
+                    trigger_call_Stat = 2
+                    -- 提示信息的索引值
+                    message_index = index
+                    return string.format('{"triggerResult": %d,
+                    "triggerCallStat": %d,
+                    "apiCount": %d,
+                    "threshold": %d,
+                    "messageIndex": %d}',
+                            trigger_result,
+                            trigger_call_Stat,
+                            api_count,
+                            threshold,
+                            message_index)
+                end
+            end
+            -- 普通规则还在生效限制中
+            if (redis.call('exists', depth_rule_limit_key) == 1) then
+                -- 发生了限制
+                trigger_result = 1
+                -- 提示信息的索引值
+                message_index = index
+                return string.format('{"triggerResult": %d,
+                 "triggerCallStat": %d, "apiCount": %d, "threshold": %d,
+                 "messageIndex": %d}', trigger_result, trigger_call_Stat,
+                        api_count, threshold, message_index)
+            end
+        end
+    end
+end
+return string.format('{"triggerResult": %d, "triggerCallStat": %d,
+"apiCount": %d, "threshold": %d, "messageIndex": %d}'
+, trigger_result, trigger_call_Stat,
+        api_count, threshold, message_index)
+```
+
+**普通规则逻辑**
+
+普通规则主要通过 Redis 的键值和过期时间实现请求次数的统计和限制。
+
+1. 统计请求次数
+   - 使用 `incrby` 增加计数器的值。
+   - 如果是第一次请求，设置该计数器的过期时间为统计时间窗口长度（`rule_stat_time`）。
+2. 检查是否超出阈值
+   - 如果当前请求数超过阈值（`rule_threshold`），检查是否存在对应的限制键（`rule_limit_key`）。
+   - 如果限制键不存在，则设置限制键并设置其过期时间为限制时长（`rule_effective_time`）。
+   - 同时，记录触发日志到 Redis 的 `zset` 结构中（用于深度规则统计）。
+3. 检查当前限制状态
+   - 如果限制键仍存在，则说明当前规则限制正在生效，设置 `trigger_result` 为 `1`。
+
+**深度规则逻辑**
+
+深度规则提供了更细粒度的限制逻辑，基于时间窗口统计进行动态调整。
+
+1. 获取深度规则
+   - 从 `apiRule` 中提取所有深度规则（`depthRules`）。
+   - 遍历每条深度规则，依次进行检查。
+2. 清理过期统计
+   - 删除 `zset` 中超出深度规则时间窗口的历史数据（减少 Redis 存储压力）。
+3. 动态调整时间窗口
+   - 确保当前时间窗口起点和终点在深度规则范围内，并计算当前统计的请求数。
+4. 判断是否超出限制
+   - 如果当前请求数超过深度规则阈值，检查深度规则的限制键是否存在。
+   - 如果限制键不存在，则创建该限制键并设置过期时间，同时记录日志和触发限制。
+5. 检查当前限制状态
+   - 如果限制键仍存在，说明该深度规则限制正在生效，触发限制。
+
+ **结果返回**
+
+无论是普通规则还是深度规则，最终都会返回以下信息：
+
+- `triggerResult`：是否触发限制。
+- `triggerCallStat`：是否需要记录限制日志（普通规则为 `1`，深度规则为 `2`）。
+- `apiCount`：当前统计的 API 调用次数。
+- `threshold`：当前规则的限制阈值。
+- `messageIndex`：深度规则的提示信息索引（仅当深度规则触发限制时有效）。
+
