--- a/My Project/大麦/大麦项目笔记——业务功能.md
+++ b/My Project/大麦/大麦项目笔记——业务功能.md
@@ -54,7 +54,7 @@
 
 #### 1. 预热购票人信息
 
-因为进行购票的时候是高并发，因此即使购票人信息表是通过userId取查询的不会引发全路由也不应该直接查询数据库。应从缓存查询。
+因为进行购票的时候是高并发，因此即使购票人信息表是通过userId去查询的不会引发全路由也不应该直接查询数据库。应从缓存查询。
 
 查询条件：
 
